# hc-power-table-graphs

./: .cproject  .gitignore  .project  CMakeLists.txt  CanvasHelper.cpp  DateHelper.cpp  DateHelper.h  LinkDef.h  MyFrame.cpp  MyFrame.h  MyMainFrame.cpp  PowerGraphs.desktop  README.md  install.bat  main.cpp  power-graphs.xpm
include/: MyFrame.h  MyMainFrame.h
resources/: Info.plist  PowerGraphs.icns  PowerGraphs.xpm
src/: CanvasHelper.cpp  MyMainFrame.cpp  main.cpp
